# spectrogram-generator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  SConstruct  build.sh  config.py  docs.sh  main.cpp  run.sh  run_tests.sh  tests.sh  wyniki.txt
cmake_modules/: FindFFTW.cmake  FindFFmpeg.cmake  FindLIBAV.cmake
docs/: spectrogramDox
docs/docs.pages/: pageone.md
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _data_computer_8cpp.html  _data_computer_8cpp__incl.dot  _data_computer_8hpp.html  _data_computer_8hpp__dep__incl.dot  _data_computer_8hpp__incl.dot  _data_computer_8hpp_source.html  _decoder_8cpp.html  _decoder_8cpp__incl.dot  _decoder_8hpp.html  _decoder_8hpp.js  _decoder_8hpp__dep__incl.dot  _decoder_8hpp__incl.dot  _decoder_8hpp_source.html  _generator_configuration_8cpp.html  _generator_configuration_8cpp.js  _generator_configuration_8cpp__incl.dot  _generator_configuration_8hpp.html  _generator_configuration_8hpp.js  _generator_configuration_8hpp__dep__incl.dot  _generator_configuration_8hpp__incl.dot  _generator_configuration_8hpp_source.html  _image_generator_8cpp.html  _image_generator_8cpp__incl.dot  _image_generator_8hpp.html  _image_generator_8hpp__dep__incl.dot  _image_generator_8hpp__incl.dot  _image_generator_8hpp_source.html  _open_m_p_check_version_8c.html  _open_m_p_check_version_8c__incl.dot  _open_m_p_check_version_8cpp.html  _open_m_p_check_version_8cpp__incl.dot  _open_m_p_try_flag_8c.html  _open_m_p_try_flag_8c__incl.dot  _open_m_p_try_flag_8cpp.html  _open_m_p_try_flag_8cpp__incl.dot  _r_e_a_d_m_e_8md.html  (+78 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+34 more)
include/: Benchmark.hpp  ConfigReader.hpp  DataComputer.hpp  Decoder.hpp  Drawing.hpp  FFT.hpp  GeneratorConfiguration.hpp  ImageGenerator.hpp  SpectrogramGenerator.hpp  drawImg.hpp  fft.hpp
lib/FFmpeg/: CMakeLists.txt
src/: ConfigReader.cpp  DataComputer.cpp  Decoder.cpp  Drawing.cpp  FFT.cpp  GeneratorConfiguration.cpp  ImageGenerator.cpp  SpectrogramGenerator.cpp  drawImg.cpp  fft.cpp  main.cpp
test/: test.cpp
